message-ai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-ai
  labels:
    run: message-ai
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    run: message-ai
