message-ai/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: message-ai-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - ai.jakegealer.me
    secretName: ai-prod-letsencrypt
  rules:
  - host: ai.jakegealer.me
    http:
      paths:
      - path: /
        backend:
          serviceName: message-ai
          servicePort: 8000
